Add tagging, posts, and some other junk.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <li class="download"><a href="/">Databases</a></li>
     <li class="download"><a href="/">Workflow</a></li>
     <br/>
-    <li class="download"><a href="about.html">About</a></li>
+    <li class="download"><a href="/about.html">About</a></li>
 </ul>
 
 <!--
