--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Opsantipatterns by rtyler</title>
+    <title>Operations Anti-Patterns  - {{ page.title }}</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <script src="/javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1 class="header">Operations<br/>Anti-Patterns</h1>
+      <h1 class="header"><a href="index.html">Operations<br/>Anti-Patterns</a></h1>
       <p class="header">"It seemed like a good idea at the time"</P>
 
       {% include sidebar.html %}
