Fix stupid header link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1 class="header"><a href="index.html">Operations<br/>Anti-Patterns</a></h1>
+      <h1 class="header"><a href="/">Operations<br/>Anti-Patterns</a></h1>
       <p class="header">"It seemed like a good idea at the time"</P>
 
       {% include sidebar.html %}
