--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
+/* 
+ * @import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
+ */
 
 /* MeyerWeb Reset */
 
