Add the workflow tag to the site bar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <ul>
     <li class="download"><a href="/">Caching</a></li>
     <li class="download"><a href="/">Databases</a></li>
-    <li class="download"><a href="/">Workflow</a></li>
+    <li class="download"><a href="/tags/workflow.html">Workflow</a></li>
     <br/>
     <li class="download"><a href="/about.html">About</a></li>
 </ul>
