Add a stupid atom feed

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,7 @@
     <li class="download"><a href="/tags/workflow.html">Workflow</a></li>
     <br/>
     <li class="download"><a href="/about.html">About</a></li>
+    <li class="download"><a href="/atom.xml">Atom Feed</a></li>
 </ul>
 
 <!--
