Add some better sidebar links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,8 @@
 <ul>
-    <li class="download"><a href="/">Caching</a></li>
-    <li class="download"><a href="/">Databases</a></li>
+    <li class="download"><a href="/tags/devops.html">Dev Ops</a></li>
+    <li class="download"><a href="/tags/management.html">Management</a></li>
     <li class="download"><a href="/tags/workflow.html">Workflow</a></li>
+    <li class="download"><a href="/tags/tools.html">Tools</li>
     <br/>
     <li class="download"><a href="/about.html">About</a></li>
     <li class="download"><a href="/atom.xml">Atom Feed</a></li>
